@@ -1,5 +1,9 @@
 2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* improve save button
+
+2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* save/restore buttons in configuration dialog
 
 2011-07-31  Hendrik Tews  <tews@os.inf.tu-dresden.de>
